# dreamcast-in-devcontainer-example

./: .gitignore  CMakeLists.txt  README.md  clock.cpp
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yml
cmake/: NoInSourceBuilds.cmake
src/: CMakeLists.txt
src/clock_example/: CMakeLists.txt  clock.cpp
toolchains/: dreamcast.cmake
